clean up code, refactor and debug

--- a/proof of concept.ipynb
+++ b/proof of concept.ipynb
@@ -129,6 +129,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (examples.py, line 451)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/home/luca_ph/.local/lib/python3.6/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3267\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-176-dc1a2b8906cf>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    import examples\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/home/luca_ph/Documents/projects/density_visualization/examples.py\"\u001b[0;36m, line \u001b[0;32m451\u001b[0m\n\u001b[0;31m    def iris_kde(kernel_bandwidth=None):\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "import iso_levels\n",
+    "import stats\n",
+    "import examples\n",
+    "import plotting\n",
+    "import utils"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
