--- a/proof of concept.ipynb
+++ b/proof of concept.ipynb
@@ -647,7 +647,7 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -738,7 +738,7 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -854,7 +854,7 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -978,7 +978,7 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2072,7 +2072,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
